--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -16,7 +16,7 @@ $color-pink: #bd40b3 !default;
 $color-turquoise: #48e5a7 !default;
 
 // Base typography
-$font-size: 20px !default;
+$font-size: 18px !default;
 $font-color: #686868 !default;
 $background-color: $color-white !default;
 
